crates/toml_edit/tests/snapshots/invalid/table/array-no-close-01.stderr
TOML parse error at line 1, column 10
  |
1 | [[albums]
  |          ^
unclosed array table, expected `]`
